# rs-template

./: Cargo.toml
src/: main.rs
