[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[dependencies]
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-logger = {git = "https://github.com/luoyancn/slog-logger", tag = "v0.5.0"}
slog-filerotate = {git = "https://github.com/luoyancn/slog-filerotate", tag= "v0.2.0"}
